--- a/views/private/expense.ejs
+++ b/views/private/expense.ejs
@@ -1,3 +1,8 @@
+<div class="row">
+    <div class="col-lg-4">
+        <button id="button-export-collection" class="btn btn-success">Download</button>
+    </div>    
+</div>
 <div id="export-report-collection" class="row">
     <div class="col-lg-12">
         <h1 class="page-header">Expenses Report</h1>
@@ -24,29 +29,50 @@
                 </thead>
                 <tbody>
                     <% if (typeof report !== 'undefined') {
+                        var totalExpenses = 0;
                         for (var i=0; i < report.length; i++) { 
-                        if (typeof report[i].referenceNo !== 'undefined') {%>
-                            <tr>
-                              <td><%= report[i].date %></td>
-                              <td><%= report[i].referenceNo %></td>
-                              <td><%= report[i].name %></td>
-                              <td><%= report[i].type %></td>
-                              <!--<td><%= report[i].actualCost %></td>-->
-                              <td><%= report[i].amount %></td>
-                              <td><%= report[i].principal %></td>
-                              <td><%= report[i].employer %></td>
-                            </tr>
-                        <% }
+                            if (typeof report[i].referenceNo !== 'undefined') {%>
+                                <tr>
+                                  <td><%= report[i].date %></td>
+                                  <td><%= report[i].referenceNo %></td>
+                                  <td><%= report[i].name %></td>
+                                  <td><%= report[i].type %></td>
+                                  <!--<td><%= report[i].actualCost %></td>-->
+                                  <td><%= addCommas(parseFloat(Math.round(report[i].amount * 100) / 100).toFixed(2)) %></td>
+                                  <td><%= report[i].principal %></td>
+                                  <td><%= report[i].employer %></td>
+                                </tr> 
+                                <% totalExpenses += report[i].amount;
+                            }
                         }
                     }%>
                 </tbody>
             </table>
         </div>
     </div>
-</div>
-<div class="row">
     <div class="col-lg-4">
-        <button id="button-export-collection" class="btn btn-success">Download</button>
-        <button onClick="window.print()" class="btn btn-info">Print</button>
-    </div>    
+        <table style="font-size: 80%;" id="table-report-deployment" class="table table-bordered table-hover table-striped" cellspacing="0" width="100%">
+                <tbody>
+                    <tr>    
+                        <td>Total Expenses</td>
+                        <td><%=addCommas(parseFloat(Math.round(totalExpenses * 100) / 100).toFixed(2))%></td>
+                    </tr>
+                </tbody>
+        </table>
+    </div>
 </div>
+
+<%
+function addCommas(nStr)
+{
+	nStr += '';
+	var x = nStr.split('.');
+	var x1 = x[0];
+	var x2 = x.length > 1 ? '.' + x[1] : '';
+	var rgx = /(\d+)(\d{3})/;
+	while (rgx.test(x1)) {
+		x1 = x1.replace(rgx, '$1' + ',' + '$2');
+	}
+	return x1 + x2;
+}
+%>
