--- a/views/private/expense.ejs
+++ b/views/private/expense.ejs
@@ -23,6 +23,7 @@
                         <th>Type</th>
                         <!--<th>Actual Cost</th>-->
                         <th>Amount</th>
+                        <th>Country</th>
                         <th>Principal</th>
                         <th>Employer</th>
                     </tr>
@@ -31,7 +32,8 @@
                     <% if (typeof report !== 'undefined') {
                         var totalExpenses = 0;
                         for (var i=0; i < report.length; i++) { 
-                            if (typeof report[i].referenceNo !== 'undefined') {%>
+                            if (typeof report[i].referenceNo !== 'undefined' & typeof report[i].amount !== 'undefined' 
+                            & typeof report[i].principal !== 'undefined') { %>
                                 <tr>
                                   <td><%= report[i].date %></td>
                                   <td><%= report[i].referenceNo %></td>
@@ -39,6 +41,7 @@
                                   <td><%= report[i].type %></td>
                                   <!--<td><%= report[i].actualCost %></td>-->
                                   <td><%= addCommas(parseFloat(Math.round(report[i].amount * 100) / 100).toFixed(2)) %></td>
+                                  <td><%= report[i].country %></td>
                                   <td><%= report[i].principal %></td>
                                   <td><%= report[i].employer %></td>
                                 </tr> 
