--- a/views/private/collection.ejs
+++ b/views/private/collection.ejs
@@ -22,21 +22,27 @@
                         <th>Name</th>
                         <th>Type</th>
                         <th>Amount</th>
+                        <th>Country</th>
+                        <th>Principal</th>
+                        <th>Employer</th>
                     </tr>
                 </thead>
                 <tbody>
                     <% if (typeof report !== 'undefined') {
                         var totalPayments = 0;
                         for (var i=0; i < report.length; i++) { 
-                            if (typeof report[i].referenceNo !== 'undefined') { %>
+                            if (typeof report[i].referenceNo !== 'undefined' & typeof report[i].amount !== 'undefined') { %>
                                 <tr>
                                   <td><%= report[i].date %></td>
                                   <td><%= report[i].referenceNo %></td>
                                   <td><%= report[i].name %></td>
                                   <td><%= report[i].type %></td>
                                   <td><%= addCommas(parseFloat(Math.round(report[i].amount * 100) / 100).toFixed(2)) %></td>
+                                  <td><%= report[i].country %></td>
+                                  <td><%= report[i].principal %></td>
+                                  <td><%= report[i].employer %></td>
                                 </tr>
-                            <% totalPayments += report[i].amount;
+                                <% totalPayments += report[i].amount;
                             }
                         }
                     }%>
