--- a/views/private/admin.ejs
+++ b/views/private/admin.ejs
@@ -170,6 +170,7 @@
                                                     <option>(Select Role)</option>
                                                 <option>accounts</option>
                                                 <option>admin</option>
+                                                <option>viewer</option>
                                                 <option>su</option>
                                                 </select>
                                             </div>
