test dev commit

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -283,6 +283,7 @@
                         <label>Country</label>
                         <select name="country" class="form-control">
                             <!-- CREATE LOGIC HERE -->
+                            <option id="">ALL</option>
                             <% for (var i=0; i < ddlCountry.length; i++) { %>
                                  <option><%= ddlCountry[i].name %></option>
                             <% } %>
