--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -64,6 +64,9 @@
                                 <a href="#" href='#' data-toggle='modal' data-target='#report-collection'>Collections</a>
                             </li>
                             <li>
+                                <a href="#" href='#' data-toggle='modal' data-target='#report-collectibles'>Collectibles</a>
+                            </li>
+                            <li>
                                 <a href="#" href='#' data-toggle='modal' data-target='#report-deployment'>Deployments</a>
                             </li>
                         </ul>
@@ -224,6 +227,84 @@
                     <div class="form-group">
                         <label>Transaction Type</label>
                         <select id="report-collection-ddl-type" name="type" class="form-control">
+                            <!-- CREATE LOGIC HERE -->
+                            <option id="">ALL</option>
+                            <% for (var i=0; i < ddlType.length; i++) { 
+                                if (ddlType[i].module === 1) {
+                                %>
+                                 <option><%= ddlType[i].description %></option>
+                            <% }
+                            } %>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                            <button name="close" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button class="btn btn-primary">Run Report</button>
+                        </div>
+                </form>
+          </div>
+          <div class="modal-footer">
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <div class="modal fade" id="report-collectibles" tabindex="-1" role="dialog" data-backdrop="static" aria-labelledby="label-report-collectibles">
+      <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="label-report-collectibles">Collectibles Report</h4>
+          </div>
+          <div class="modal-body">
+                <form id="form-report-collectibles" action="report/collectibles" target="_blank">
+                    <div class="form-group">
+                        <div id="report-collectibles-message" class="form-group">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Start Date</label>
+                        <div class='input-group date' id='report-collectibles-start'>
+                            <input name='start' type='text' class="form-control" />
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar">
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>End Date</label>
+                        <div class='input-group date' id='report-collectibles-end'>
+                                <input name='end' type='text' class="form-control" />
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar">
+                                    </span>
+                                </span>
+                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Country</label>
+                        <select name="country" class="form-control">
+                            <!-- CREATE LOGIC HERE -->
+                            <option id="">ALL</option>
+                            <% for (var i=0; i < ddlCountry.length; i++) { %>
+                                 <option><%= ddlCountry[i].name %></option>
+                            <% } %>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Principal (Tie-Up)</label>
+                        <select id="report-expense-ddl-principal" name="principal" class="form-control">
+                            <!-- CREATE LOGIC HERE -->
+                            <option id="">ALL</option>
+                            <% for (var i=0; i < ddlTieUp.length; i++) { %>
+                                 <option id="<%= ddlTieUp[i].id %>"><%= ddlTieUp[i].name %></option>
+                            <% } %>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Transaction Type</label>
+                        <select id="report-collectibles-ddl-type" name="type" class="form-control">
                             <!-- CREATE LOGIC HERE -->
                             <option id="">ALL</option>
                             <% for (var i=0; i < ddlType.length; i++) { 
